samples/_failures_safe/1761789588_1f2815_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_72b09634.c: In function ‘print_stats’:
./samples/SAFE/__tmp_72b09634.c:137:16: error: missing terminating " character
  137 |         printf("%-6s: %d (%.1f%%)\
      |                ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_72b09634.c:137:9: error: expected expression at end of input
  137 |         printf("%-6s: %d (%.1f%%)\
      |         ^~~~~~
./samples/SAFE/__tmp_72b09634.c:137:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_72b09634.c:137:9: error: expected declaration or statement at end of input
